Optimize imports + cleanup code and improve logic